Update links to point to HTML files

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <body>
   <div class="container">
     <h1 style=padding-left:5%;font-size:40px;color:black;padding-top:5%>Hostel Management System</h1>
-    <a href="/student">Student Management</a>
-    <a href="/room">Room Management</a>
-    <a href="/fee">Fee Management</a>
-    <a href="/admin">Admin Panel</a>
+    <a href="student.html">Student Management</a>
+    <a href="room.html">Room Management</a>
+    <a href="admin.html">Admin Panel</a>
 
   </div>
    <style>
